--- a/k8s.config
+++ b/k8s.config
@@ -3,7 +3,7 @@
 # jq / kustomize 
 
 #------------------------------------------------------------------
-# ex : cniVersion={cni version}
+# ex : cniPluginVersion={cni plugin version}
 # ex : k8sVersion={kubernetes version}
 # ex : apiServer={kubernetes API server ip}
 # ex : podSubnet={POD_IP_POOL}/{CIDR}
@@ -11,7 +11,7 @@
 # ex : kubevirtVersion={kubevirt plugin version}
 #------------------------------------------------------------------
 #------------------------------------------------------------------
-# ex : crioVersion=1.4.0
+# ex : cniPluginVersion=1.4.0
 # ex : k8sVersion=1.29.0
 # ex : apiServer=172.21.7.121
 # ex : podSubnet=10.244.0.0/16
@@ -19,7 +19,7 @@
 #------------------------------------------------------------------
 
 #kubernetes
-cniVersion=1.4.0
+cniPluginVersion=1.4.0
 k8sVersion=1.29.0
 apiServer=172.22.7.121
 podSubnet=10.244.0.0/16
